--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ordersystem
 
 # PostgreSQL datasource settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/inventorydb
-spring.datasource.username=your_db_username
-spring.datasource.password=your_db_password
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate settings
@@ -17,4 +17,11 @@ spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 spring.flyway.user=postgres
 spring.flyway.password=12345678
 spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-on-migrate=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@example.com
+spring.mail.password=your-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
