Add flyway config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA / Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://localhost:5432/inventorydb
+spring.flyway.user=postgres
+spring.flyway.password=postgres
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
