--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Flyway Configuration
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://localhost:5432/inventorydb
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 spring.flyway.user=postgres
-spring.flyway.password=postgres
+spring.flyway.password=12345678
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
