--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=ordersystem
 
 # PostgreSQL datasource settings
 spring.datasource.url=jdbc:postgresql://localhost:5432/inventorydb
-spring.datasource.username=your_db_username
-spring.datasource.password=your_db_password
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
 
 # Flyway Configuration
