--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=ordersystem
 
 # PostgreSQL datasource settings
 spring.datasource.url=jdbc:postgresql://localhost:5432/inventorydb
-spring.datasource.username=your_db_username
-spring.datasource.password=your_db_password
+spring.datasource.username=postgres
+spring.datasource.password=Nemxinhtr@1
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate settings
@@ -15,6 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.enabled=true
 spring.flyway.url=jdbc:postgresql://localhost:5432/inventorydb
 spring.flyway.user=postgres
-spring.flyway.password=postgres
+spring.flyway.password=Nemxinhtr@1
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
